unpackaged/main/default/objects/ACG_Membership_Create_QuickLinks__mdt/ACG_Membership_Create_QuickLinks__mdt.object-meta.xml
<CustomObject>
    <description>QuickLinks to be displayed on Membership Create Screen based on current users club.</description>
    <label>Membership Create QuickLinks</label>
    <pluralLabel>Membership Create QuickLinks</pluralLabel>
</CustomObject>