unpackaged/main/default/objects/ACG_Membership_Create_QuickLinks__mdt/fields/ACG_Club__c.field-meta.xml
<CustomField>
    <fullName>ACG_Club__c</fullName>
    <label>Club</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CMC</fullName>
                <default>true</default>
                <label>CMC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>