unpackaged/main/default/objects/ACG_Membership_Create_QuickLinks__mdt/fields/ACG_Order__c.field-meta.xml
<CustomField>
    <fullName>ACG_Order__c</fullName>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>