unpackaged/main/default/objects/ACG_Membership_Create_QuickLinks__mdt/fields/ACG_QuickLinks_URL__c.field-meta.xml
<CustomField>
    <fullName>ACG_QuickLinks_URL__c</fullName>
    <label>QuickLinks URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>